# DoWhiz

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  TECH_DESIGN.md  package-lock.json  refactor_instruction.md  vision.md
DoWhiz_service/: AGENTS.md  CLAUDE.md  README.md  employee.toml
DoWhiz_service/scheduler_module/: Cargo.toml  README.md
DoWhiz_service/scheduler_module/src/: channel.rs  employee_config.rs  lib.rs  mailbox.rs  memory_store.rs  past_emails.rs  secrets_store.rs  service.rs  thread_state.rs
DoWhiz_service/scheduler_module/src/adapters/: mod.rs  postmark.rs  slack.rs
DoWhiz_service/scheduler_module/src/index_store/: mod.rs
DoWhiz_service/scheduler_module/src/user_store/: mod.rs
DoWhiz_service/scheduler_module/tests/: email_html_e2e.rs  email_html_e2e_2.rs  github_env_e2e.rs  memory_e2e.rs  scheduler_agent_e2e.rs  scheduler_basic.rs  scheduler_concurrency.rs  scheduler_followups.rs  secrets_e2e.rs  service_real_email.rs  thread_latest_epoch_e2e.rs
MVP/: README.md
MVP_rust/: AGENTS.md  Cargo.toml  README.md
MVP_rust/scheduler_module/: Cargo.toml  README.md
MVP_rust/scheduler_module/src/: lib.rs  past_emails.rs  service.rs
MVP_rust/scheduler_module/src/index_store/: mod.rs
MVP_rust/scheduler_module/src/index_store/tests/: mod.rs
MVP_rust/scheduler_module/src/user_store/: mod.rs
MVP_rust/scheduler_module/src/user_store/tests/: mod.rs
MVP_rust/scheduler_module/tests/: scheduler_basic.rs  scheduler_concurrency.rs  scheduler_followups.rs  service_real_email.rs
MVP_rust/send_emails_module/: Cargo.toml  README.md
MVP_rust/send_emails_module/src/: lib.rs  send_emails.rs
MVP_rust/send_emails_module/tests/: live_postmark.rs  send_emails_integration.rs
api_reference_documentation/: meeting_realtime_zoom_instructions.md
(+402 files in other folders)
