[package]
name = "scheduler_module"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
dotenvy = "0.15"
md5 = "0.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
kuchiki = "0.8"

send_emails_module = { path = "../send_emails_module" }
run_task_module = { path = "../run_task_module" }

[dev-dependencies]
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder"] }
tempfile = "3"
