[package]
name = "scheduler_module"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }

send_emails_module = { path = "../send_emails_module" }
run_task_module = { path = "../run_task_module" }
