[package]
name = "send_emails_module"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
dotenvy = "0.15"
mime_guess = "2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
